<resources>
    <string name="app_name">ShoppingApp</string>



        <!-- Splash Screen -->
        <string name="splash_message">Welcome to Shopping List App</string>

        <!-- Authentication -->
        <string name="login_title">Login</string>
        <string name="register_title">Register</string>
        <string name="forgot_password">Forgot Password?</string>
        <string name="email_hint">Email Address</string>
        <string name="password_hint">Password</string>
        <string name="login_button">Login</string>
        <string name="register_button">Register</string>
        <string name="reset_password_button">Reset Password</string>
        <string name="empty_field_error">All fields are required</string>
        <string name="login_failed">Login failed</string>
        <string name="reset_password_success">Reset email sent</string>
        <string name="reset_password_failed">Failed to send reset email</string>

        <!-- Shopping List -->
        <string name="shopping_list_title">Shopping List</string>
        <string name="add_item_button">Add Item</string>
        <string name="delete_button">Delete</string>
        <string name="item_name">Item Name</string>
        <string name="item_quantity">Quantity</string>
        <string name="item_price">Price</string>
        <string name="item_add_success">Item added successfully</string>
        <string name="item_add_failed">Failed to add item</string>


</resources>